--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap");
 
-*{
-  padding:0;
-  margin:0;
+* {
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
   font-family: "Nunito", "san-serif", "Helvetica";
 }
 
 /* NavBar */
-.nav-bar{
-  height:70px;
-  background: black;
+.nav-bar {
+  height: 70px;
+  background: rgb(15, 4, 61);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -26,19 +26,19 @@
   font-size: 40px;
 }
 
-.nav-bag{
+.nav-bag {
   display: flex;
   align-items: center;
 }
 
-.bag-quantity{
+.bag-quantity {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 25px;
   width: 25px;
   background-color: yellow;
-  border-radius:50%;
+  border-radius: 50%;
   font-size: 14px;
   font-weight: 700;
   color: black;
@@ -47,7 +47,7 @@
 
 /* NOt Found */
 
-.not-found{
+.not-found {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -58,9 +58,270 @@
 
 .not-found h2 {
   font-size: 55px;
-
 }
 
 .not-found p {
   font-size: 20px;
+}
+
+/* Home component */
+
+.home-container {
+  padding: 2rem 4rem;
+}
+
+.home-container h2 {
+  font-size: 40px;
+  font-weight: 400;
+  text-align: center;
+}
+
+.products {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+}
+
+.product {
+  width: 250px;
+  max-width: 100%;
+  height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  margin: 1rem auto;
+  padding: 1rem;
+  border-radius: 6px;
+  box-shadow: -5px -5px 10px rgba(31, 2, 2, 0.185),
+    2px 2px 5px rgba(12, 94, 226, 0.61);
+  background-color: rgb(255, 255, 255);
+}
+
+.product img {
+  height: 60%;
+  margin-top: 1rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product h3 {
+  font-size: 25px;
+  font-weight: 400;
+}
+.details {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 5px;
+}
+
+.product .details .price {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.product button {
+  width: 100%;
+  height: 40px;
+  border-radius: 7px;
+  margin-top: 1.5rem;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: white;
+  background-color: rgb(34, 132, 165);
+  letter-spacing: 1.15px;
+}
+
+.cartHeading {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.prcqt {
+  margin: 1rem;
+}
+
+/* CART */
+
+.cart-container {
+  padding: 2rem 4rem;
+}
+
+.cart-container h2 {
+  font-weight: 400;
+  font-size: 30px;
+  text-align: center;
+}
+
+.cart-container .titles {
+  margin: 2rem 0 1rem 0;
+}
+
+.cart-container .titles h3 {
+  font-weight: 400;
+  font-size: 14px;
+  text-transform: uppercase;
+}
+
+.cart-container .titles,
+.cart-item {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  column-gap: 0.5rem;
+}
+
+.cart-item {
+  border-top: 1px solid rgba(187, 187, 187);
+  padding: 1rem 0;
+}
+
+.cart-container .titles .product-title {
+  padding-left: 0.5rem;
+}
+.cart-container .titles .total {
+  padding-right: 0.5rem;
+  justify-self: right;
+}
+
+.cart-item .cart-product {
+  display: flex;
+}
+
+.cart-item .cart-product img {
+  width: 100px;
+  max-width: 100%;
+  margin-right: 1rem;
+}
+
+.cart-item .cart-product h3 {
+  font-weight: 400;
+}
+
+.cart-item .cart-product button {
+  border: none;
+  outline: none;
+  margin-top: 0.7rem;
+  cursor: pointer;
+  background: none;
+  color: gray;
+}
+
+.cart-item .cart-product button:hover {
+  color: black;
+}
+.cart-product-total-price {
+  padding-right: 0.5rem;
+  justify-self: right;
+  font-weight: 700;
+}
+
+.cart-product-qantity {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 130px;
+  max-width: 100%;
+  border: 0.5px solid rgba(177, 177, 177);
+  border-radius: 5px;
+}
+
+.cart-product-qantity button {
+  border: none;
+  outline: none;
+  background: none;
+  padding: 0.7rem 1.5rem;
+}
+.cart-product-qantity .count {
+  padding: 0.7rem 0;
+}
+
+/* Cart Summary */
+.cart-summary {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  border-top: 1px solid rgb(187, 187, 187);
+  padding-top: 2rem;
+}
+
+.cart-summary .clear-cart {
+  width: 130px;
+  max-width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  font-weight: 400;
+  letter-spacing: 1.15px;
+  border: 0.5px solid rgb(177, 177, 177);
+  cursor: pointer;
+  background: none;
+  color: gray;
+  outline: none;
+}
+
+.cart-checkout {
+  width: 270px;
+  max-width: 100%;
+}
+
+.cart-checkout .subtotal {
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
+}
+
+.cart-checkout .amount {
+  font-weight: 700;
+}
+
+.cart-checkout p {
+  font-size:14px;
+  font-weight:200;
+  margin: 0.5rem 0;
+  color: gray;
+}
+
+.cart-checkout button {
+ width: 100%;
+ height: 40px;
+ border-radius: 7px;
+
+ font-weight: 400;
+ border: none;
+ outline: none;
+ cursor: pointer;
+ color: white;
+ background-color: rgb(34, 132, 165);
+ letter-spacing: 1.15px;
+}
+
+.continue-shopping, .start-shopping{
+   margin-top: 1rem;
+}
+
+.continue-shopping a, .start-shopping a {
+  color: gray;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.continue-shopping a span, .start-shopping a span {
+  margin-left:0.5rem;
+}
+
+.cart-empty{
+  font-size:20px;
+  color:white;
+  margin-top:2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.cart-empty p{
+color: gray;
 }
