--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -160,6 +160,12 @@
   margin: 2rem 0 1rem 0;
 }
 
+.cart-container .titles-mobile {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .cart-container .titles h3 {
   font-weight: 400;
   font-size: 14px;
@@ -278,50 +284,211 @@
 }
 
 .cart-checkout p {
-  font-size:14px;
-  font-weight:200;
+  font-size: 14px;
+  font-weight: 200;
   margin: 0.5rem 0;
   color: gray;
 }
 
 .cart-checkout button {
- width: 100%;
- height: 40px;
- border-radius: 7px;
+  width: 100%;
+  height: 40px;
+  border-radius: 7px;
 
- font-weight: 400;
- border: none;
- outline: none;
- cursor: pointer;
- color: white;
- background-color: rgb(34, 132, 165);
- letter-spacing: 1.15px;
+  font-weight: 400;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  color: white;
+  background-color: rgb(34, 132, 165);
+  letter-spacing: 1.15px;
 }
 
-.continue-shopping, .start-shopping{
-   margin-top: 1rem;
+.continue-shopping,
+.start-shopping {
+  margin-top: 1rem;
 }
 
-.continue-shopping a, .start-shopping a {
+.continue-shopping a,
+.start-shopping a {
   color: gray;
   text-decoration: none;
   display: flex;
   align-items: center;
 }
 
-.continue-shopping a span, .start-shopping a span {
-  margin-left:0.5rem;
+.continue-shopping a span,
+.start-shopping a span {
+  margin-left: 0.5rem;
 }
 
-.cart-empty{
-  font-size:20px;
-  color:white;
-  margin-top:2rem;
+.cart-empty {
+  font-size: 20px;
+  color: white;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.cart-empty p{
-color: gray;
+.cart-empty p {
+  color: gray;
+}
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .cart-container {
+    padding: 2rem 0.5rem;
+  }
+  .home-container {
+    padding: 2rem 1rem;
+  }
+  
+
+  .products {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 2rem;
+  }
+  
+  .product {
+    width: 250px;
+    max-width: 100%;
+    height: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin: 1rem auto;
+    padding: 0.3rem;
+    border-radius: 6px;
+    box-shadow: -5px -5px 10px rgba(31, 2, 2, 0.185),
+      2px 2px 5px rgba(12, 94, 226, 0.61);
+    background-color: rgb(255, 255, 255);
+  }
+  
+  .product img {
+    height: 55%;
+    margin-top: 0.5rem;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .product h3 {
+    font-size: 20px;
+    font-weight: 400;
+  }
+  .product button {
+    width: 100%;
+    height: 40px;
+    border-radius: 7px;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-weight: 400;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    color: white;
+    background-color: rgb(34, 132, 165);
+    letter-spacing: 1.15px;
+  }
+
+
+  .cart-product-qantity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    max-width: 100%;
+    border: 0.5px solid rgba(177, 177, 177);
+    border-radius: 5px;
+  }
+  .cart-product-qantity button {
+    border: none;
+    outline: none;
+    background: none;
+    padding: 0.4rem 1rem;
+  }
+  .cart-product-qantity .count {
+    padding: 0.5rem 0;
+  }
+  .nav-bar {
+    height: 70px;
+    background: rgb(15, 4, 61);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+  }
+
+  .cart-summary {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-top: 1px solid rgb(187, 187, 187);
+    padding-top: 2rem;
+  }
+
+  .cart-summary .clear-cart {
+    width: 130px;
+    max-width: 100%;
+    height: 40px;
+    margin-bottom: 2rem;
+    border-radius: 5px;
+    font-weight: 400;
+    letter-spacing: 1.15px;
+    border: 0.5px solid rgb(177, 177, 177);
+    cursor: pointer;
+    background: none;
+    color: gray;
+    outline: none;
+  }
+}
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 320px) {
+  .cart-container {
+    padding: 2rem 0.1rem;
+  }
+  .cart-product-qantity {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    max-width: 70%;
+    border: 0.5px solid rgba(177, 177, 177);
+    border-radius: 5px;
+  }
+  .cart-product-qantity button {
+    border: none;
+    outline: none;
+    background: none;
+    padding: 0.4rem 0.5rem;
+  }
+  .cart-product-qantity .count {
+    padding: 0.5rem 0;
+  }
+  .nav-bar {
+    height: 70px;
+    background: rgb(15, 4, 61);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 1rem;
+  }
+  .cart-item .cart-product img {
+    width: 100px;
+    max-width: 100%;
+    margin-right: 0.2rem;
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
 }
